internship-page-changes: got rid of the slick carousel stuff cause it did not work and added sam to testimonials

--- a/intern.html
+++ b/intern.html
@@ -393,180 +393,6 @@
         </div> <br/>
     </section>
 
-    <section id="testimonials" class="g-theme-bg-gray-dark-v1 g-py-100">
-      <div class="u-heading-v2-2--bottom text-center g-brd-primary g-mb-70">
-        <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white mb-0">Testimonials</h2>
-      </div>
-
-      <div id="carouselCus1" class="js-carousel js-carousel_single-item-thumbs5--v2__thumbs u-carousel-v1 container g-parent g-max-width-645 px-0 g-mb-50 slick-initialized slick-slider" data-infinite="true" data-center-mode="true" data-variable-width="true"
-        data-slides-show="5" data-arrows-classes="u-arrow-v1 g-absolute-centered g-width-35 g-height-40 g-font-size-26 g-color-gray g-bg-white opacity-0 g-opacity-1--parent-hover g-transition-0_2 g-transition--ease-in" data-arrow-left-classes="fa fa-angle-left g-ml-minus-82"
-        data-arrow-right-classes="fa fa-angle-right g-ml-82" data-nav-for="#carouselCus2">
-        <div class="js-prev u-arrow-v1 g-absolute-centered g-width-35 g-height-40 g-font-size-26 g-color-gray g-bg-white opacity-0 g-opacity-1--parent-hover g-transition-0_2 g-transition--ease-in fa fa-angle-left g-ml-minus-82 slick-arrow" style=""></div>
-        <div class="slick-list draggable" style="padding: 0px;">
-          <div class="slick-track" style="opacity: 1; width: 50000px; transform: translate3d(-1432px, 0px, 0px);">
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="-6" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="-5" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_neck.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person2.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_neck.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide" data-slick-index="0" aria-hidden="true" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person2.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_neck.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide" data-slick-index="4" aria-hidden="true" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-active" data-slick-index="5" aria-hidden="false" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person2.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-active" data-slick-index="6" aria-hidden="false" tabindex="-1" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-current slick-active slick-center" data-slick-index="7" aria-hidden="false" tabindex="0" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/fahad.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-active" data-slick-index="8" aria-hidden="false" tabindex="0" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_neck.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-active" data-slick-index="9" aria-hidden="false" tabindex="0" style="height: auto;">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="10" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person2.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="11" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="12" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_neck.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="13" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="14" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person2.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="15" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="16" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_neck.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="17" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="18" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/person2.jpg" alt="Image description">
-            </div>
-            <div class="js-thumb slick-slide slick-cloned" data-slick-index="19" aria-hidden="true" tabindex="-1">
-              <img class="g-width-130 g-height-130" src="./assets/custom/img/interns/long_head.jpg" alt="Image description">
-            </div>
-          </div>
-        </div>
-        <div class="js-next u-arrow-v1 g-absolute-centered g-width-35 g-height-40 g-font-size-26 g-color-gray g-bg-white opacity-0 g-opacity-1--parent-hover g-transition-0_2 g-transition--ease-in fa fa-angle-right g-ml-82 slick-arrow" style=""></div>
-      </div>
-
-      <div id="carouselCus2" class="js-carousel js-carousel_single-item-thumbs5--v2__slides container text-center g-max-width-645 px-0 slick-initialized slick-slider" data-infinite="true" data-fade="true" data-animation="linear" data-nav-for="#carouselCus1">
-        <div class="slick-list draggable">
-          <div class="slick-track" style="opacity: 1; width: 6450px;">
-            <div class="js-slide slick-slide" data-slick-index="0" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Julia B. Mcraflane</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Spencet Group</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -645px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Amy Clayton</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Abibas</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                Ut augue diam, lacinia fringilla erat eu, vehicula commodo quam. Aliquam eget accumsan ligula. Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -1290px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Fred Penner</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Ruma</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Ut augue diam, lacinia fringilla erat eu, vehicula commodo quam. Aliquam eget accumsan ligula. Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -1935px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Martina Saiz</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Jonda</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="4" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -2580px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Joseph B. Seward</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Aodi</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque et ultricies sem, et vulputate dui. Morbi aliquam leo id ipsum tempus mollis."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="5" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -3225px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Julia B. Mcraflane</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Spencet Group</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="6" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -3870px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Amy Clayton</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Abibas</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                Ut augue diam, lacinia fringilla erat eu, vehicula commodo quam. Aliquam eget accumsan ligula. Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide slick-current slick-active" data-slick-index="7" aria-hidden="false" tabindex="0" style="width: 645px; position: relative; left: -4515px; top: 0px; z-index: 999; opacity: 1; height: auto;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Fahad Ashraf</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Summer Intern 2017/2018</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Case Consulting is an awesome company that has its hands in a lot of interesting technology. At this internship, I learned what it meant to be a professional in the field. I learned full-stack technologies such as NodeJS and industry standards such as
-                OAuth. We also got opportunities to explore the Amazon ecosystem and deployed an application into the real world that will be used by real people. The Case internship is a rewarding opportunity that is centered around great mentors that
-                will do everything to help you succeed."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="8" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -5160px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Martina Saiz</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Jonda</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt."
-              </blockquote>
-            </div>
-            <div class="js-slide slick-slide" data-slick-index="9" aria-hidden="true" tabindex="-1" style="width: 645px; position: relative; left: -5805px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms linear;">
-              <h4 class="text-uppercase g-font-weight-800 g-font-size-16 g-color-white g-mb-5">Joseph B. Seward</h4>
-              <em class="d-block text-uppercase g-font-style-normal g-font-size-12 g-color-gray-light-v4-opacity-0_6 g-mb-20">Aodi</em>
-              <blockquote class="g-font-style-italic g-font-size-16 g-color-gray-light-v4-opacity-0_6">
-                "Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque et ultricies sem, et vulputate dui. Morbi aliquam leo id ipsum tempus mollis."
-              </blockquote>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section id="Testimonial" class="testimonial">
       <div class="g-pt-100 g-pb-30">
         <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
@@ -576,7 +402,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/long_head.jpg" class="rounded-circle potrait" />
+              <img src="./assets/custom/img/interns/fahad.jpg" class="rounded-circle potrait" />
             </div>
             <div class="col-md-10">
               <p class="g-color-white">
@@ -594,12 +420,12 @@
               </p>
             </div>
             <div class="col-md-2 order-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/long_neck.jpg" class="rounded-circle potrait" style="text-align:center" />
+              <img src="./assets/custom/img/interns/jacob.jpg" class="rounded-circle potrait" style="text-align:center" />
             </div>
           </div>
           <div class="row" style="margin-top:100px;">
             <div class="col-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/long_head.jpg" class="rounded-circle potrait" />
+              <img src="./assets/custom/img/interns/andrew.gif" class="rounded-circle potrait" />
             </div>
             <div class="col-md-10">
               <p class="g-color-white">
@@ -617,7 +443,7 @@
               </p>
             </div>
             <div class="col-md-2 order-md-2" style="text-align:center">
-              <img src="./assets/custom/img/interns/long_neck.jpg" class="rounded-circle potrait" style="text-align:center" />
+              <img src="./assets/custom/img/interns/sam.jpg" class="rounded-circle potrait" style="text-align:center" />
             </div>
           </div>
           <div class="row" style="margin-top:100px;">
