internship-page-changes: added github to contacts

--- a/intern.html
+++ b/intern.html
@@ -500,6 +500,11 @@
                   </div>
 
                   <div class="g-pos-rel g-pl-35 g-mb-25">
+                    <i class="fab fa-github g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary fa-fw"></i>
+                    <a class="g-color-white" href="https://github.com/caseconsulting"><strong>case consulting</strong></a>
+                  </div>
+
+                  <div class="g-pos-rel g-pl-35 g-mb-25">
                     <i class="fab fa-facebook-f red-icon g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary fa-fw"></i>
                     <a class="g-color-white" href="https://www.facebook.com/ConsultwithCase/" target="_blank" rel="noopener"><strong>Consult with Case</strong></a>
                   </div>
